# petProject

./: .gitignore  pyproject.toml
config/: dbSettings.py
migrations/: env.py
models/: shemas.py
modules/DB/: database.py  helpFunc.py
src/: main.py
